--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
       z-index: 1000;
       background: transparent; /* Starfield shows through */
     }
+    
+    /* Dark overlay for readability */
+    #main-menu::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: -1;
+    }
 
     #main-menu.hidden {
       display: none;
