fix: chapter 1 camera, control content

--- a/index.html
+++ b/index.html
@@ -1495,7 +1495,7 @@
 
             <div class="control-row" style="border: none; width: auto; margin-bottom: 0; align-items: center;">
               <span style="display: inline-flex; align-items: center; justify-content: center; min-width: 70px; padding: 6px 12px; background: linear-gradient(to bottom, #333, #111); color: #00D9FF; border: 1px solid #555; border-bottom: 3px solid #000; border-radius: 4px; font-size: 14px; font-weight: bold; box-shadow: 0 4px 4px rgba(0, 0, 0, 0.4); margin-right: 15px;">🖱️ Scroll</span>
-              <span class="control-desc">Adjust Camera FOV</span>
+              <span class="control-desc">Adjust Camera Distance</span>
             </div>
           </div>
         </div>
