chore: Add mising tech

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
       <div class="credits-section">
         <h4>Technology</h4>
-        <p>Three.js • Tone.js • Vite</p>
+        <p>Three.js • Cannon-es • Tone.js • Vite</p>
       </div>
 
       <div class="credits-section">
