fix: use relative paths for all assets and scripts to support GitHub Pages subfolders

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
   <link rel="icon" href="data:,">
   
   <!-- CSS Stylesheets -->
-  <link rel="stylesheet" href="/src/styles/main.css">
+  <link rel="stylesheet" href="src/styles/main.css">
   
   <!-- UI Styles -->
-  <link rel="stylesheet" href="/src/styles/ui/menu.css">
-  <link rel="stylesheet" href="/src/styles/ui/settings.css">
-  <link rel="stylesheet" href="/src/styles/ui/instructions.css">
-  <link rel="stylesheet" href="/src/styles/ui/credits.css">
+  <link rel="stylesheet" href="src/styles/ui/menu.css">
+  <link rel="stylesheet" href="src/styles/ui/settings.css">
+  <link rel="stylesheet" href="src/styles/ui/instructions.css">
+  <link rel="stylesheet" href="src/styles/ui/credits.css">
   
   <!-- Game Styles -->
-  <link rel="stylesheet" href="/src/styles/game/loading.css">
-  <link rel="stylesheet" href="/src/styles/game/level-select.css">
-  <link rel="stylesheet" href="/src/styles/game/hud.css">
-  <link rel="stylesheet" href="/src/styles/game/pause.css">
-  <link rel="stylesheet" href="/src/styles/game/controls-hint.css">
+  <link rel="stylesheet" href="src/styles/game/loading.css">
+  <link rel="stylesheet" href="src/styles/game/level-select.css">
+  <link rel="stylesheet" href="src/styles/game/hud.css">
+  <link rel="stylesheet" href="src/styles/game/pause.css">
+  <link rel="stylesheet" href="src/styles/game/controls-hint.css">
 </head>
 
 <body>
@@ -523,7 +523,7 @@
     <h3 id="chapter-subtitle-text">The Ascent</h3>
   </div>
 
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="src/main.js"></script>
 </body>
 
 </html>
