feat: Add floating fullscreen button and hint text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
       <button class="menu-btn" id="btn-credits">CREDITS</button>
       <button class="menu-btn danger" id="btn-quit-game">QUIT GAME</button>
     </div>
+    <div class="fullscreen-hint">Best experienced in fullscreen</div>
   </div>
+
+  <!-- Floating Fullscreen Button -->
+  <button id="floating-fullscreen-btn" class="hidden" title="Toggle Fullscreen">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+      <path d="M8 3H5a2 2 0 0 0-2 2v3m18 0V5a2 2 0 0 0-2-2h-3m0 18h3a2 2 0 0 0 2-2v-3M3 16v3a2 2 0 0 0 2 2h3"/>
+    </svg>
+  </button>
 
   <!-- ========== LEVEL SELECT ========== -->
   <div id="level-select" class="hidden">
