feat: fix buttons alignment on Level Select and Leaderboard screens, ensure responsive stacking and no overlap

--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
       </div>
     </div>
 
-    <button class="btn-back" id="btn-back-levels">← BACK</button>
-    <button class="btn-leaderboard" id="btn-leaderboard">🏆 LEADERBOARD</button>
+    <div class="level-select-actions">
+      <button class="btn-leaderboard" id="btn-leaderboard">🏆 LEADERBOARD</button>
+      <button class="btn-back" id="btn-back-levels">← BACK</button>
+    </div>
   </div>
 
   <!-- ========== LEADERBOARD ========== -->
